# stem-domain-analysis

./: .gitignore  LICENSE  README.md  analyze.py  pyproject.toml  requirements-gpu.txt  requirements.txt
.claude/plans/: detection-confidence-heatmap.md
.github/workflows/: test.yml
docs/: diagram.mmd
scripts/: perf_profile_classification.py
src/: __init__.py  cluster_domains.py  domain_clustering.py  domain_metrics.py  fft_coords.py  fft_features.py  fft_peak_detection.py  fft_snr_metrics.py  gates.py  global_fft.py  gpa.py  gpu_backend.py  hybrid_viz.py  ilastik_compare.py  ilastik_roi.py  io_dm4.py  multi_plane_analysis.py  peak_discovery.py  peak_finding.py  pipeline_config.py  preprocess.py  preprocess_fft_safe.py  preprocess_segmentation.py  radial_analysis.py  reference_selection.py  reporting.py  ring_analysis.py  roi_masking.py  tile_fft.py  validation.py  viz.py
tests/: synthetic.py  test_background_asls.py  test_cluster_domains.py  test_config_consolidation.py  test_detection_confidence.py  test_domain_clustering.py  test_dynamic_dc_mask.py  test_eftem_upgrade.py  test_fft_coords.py  test_fft_peak_detection.py  test_fwhm_perf.py  test_global_fft.py  test_gpa.py  test_gpa_gpu.py  test_gpu_backend.py  test_hybrid_viz.py  test_integration.py  test_low_q_exclusion.py  test_parallel_tiles.py  test_peak_finding.py  test_phase_unwrapping.py  test_preprocess_fft_safe.py  test_ring_analysis.py  test_roi_masking.py  test_snr_signal_methods.py  test_soa_accessor.py  test_tile_fft.py  test_tile_fft_gpu.py  test_tukey_window.py  test_validation.py
(+9 files in other folders)
